--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -55,5 +55,10 @@
       search.init();
     </script>
     <noscript>Please enable JavaScript to use the search form.</noscript>
+  
+  {% include home %}
   </body>
+  
+  
+  
 </html>
