--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -34,11 +34,11 @@
     }
   </style>
   <body>
-    <h1>Search</h1>
+    <h1>Wyszukaj</h1>
     <form id="search-form" action="">
       <label class="label" for="search">Search term:</label>
       <br/>
-      <input class="input" id="search" type="text" name="search" placeholder="e.g. History of" autocomplete="off">
+      <input class="input" id="search" type="text" name="search" placeholder="co jest szukane !?" autocomplete="off">
       <ul class="list  list--results" id="list">
 
       </ul>
@@ -47,10 +47,10 @@
     <script type="text/javascript" src="./src/search.js"></script>
     <script type="text/javascript">
       const search = new jekyllSearch(
-        'https://alembic.darn.es/assets/search.json',
+        './src/search.json',
         '#search',
         '#list',
-        'https://alembic.darn.es'
+        'https://grunwald1410.github.io/prose_blog/'
       );
       search.init();
     </script>
